# NetMonitor

./: .gitignore  Cargo.toml  GEMINI.md  README.md  devlog.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/design/: STYLE_GUIDE.md
docs/ideas/done/: 001-build-engine-setup.md  002-data-pipeline-maps.md  003-caps-and-embedding.md  004-process-resolver.md  005-tui-scaffolding.md  006-filtering-and-stats.md  008-protocol-expansion.md  011-geo-ip-mapping.md  012-protocol-heuristics.md  013-traffic-persistence.md  014-interactive-graphs.md  015-help-overlay.md  017-custom-themes.md  018-mouse-support.md  021-global-dashboard.md  024-adaptive-theming.md  025-persistent-config.md  026-container-service-context.md  027-traffic-shaping.md  029-stability-and-refactor.md  030-final-polish-and-cleanup.md  031-automated-testing-and-ci.md  032-headless-mode-and-exporting.md  034-ci-cd-and-packaging.md  035-man-pages-and-technical-docs.md
docs/ideas/todo/: 004-process-resolver.md  005-tui-scaffolding.md  007-tui-polish-and-kill.md  009-socket-connection-view.md  010-reverse-dns.md  011-geo-ip-mapping.md  014-interactive-graphs.md  016-smart-alerts.md  017-custom-themes.md  018-mouse-support.md  019-extended-mouse-support.md  020-historical-time-frame.md  022-tabbed-navigation.md  023-graph-ui-overhaul.md  028-documentation-readme.md  029-stability-and-refactor.md  031-automated-testing-and-ci.md  033-background-daemon-and-systemd.md  034-ci-cd-and-packaging.md
docs/kernel/: INTERNAL_SPEC.md  TECHNICAL_SPEC.md
docs/man/: netmonitor.1.md
docs/prd/: PRD.md
docs/tui/: TECHNICAL_SPEC.md
docs/workflow/: ROADMAP.md
netmonitor/: Cargo.toml
netmonitor-common/: Cargo.toml
netmonitor-common/src/: lib.rs
netmonitor-ebpf/: Cargo.toml
netmonitor-ebpf/src/: main.rs
netmonitor-xtask/: Cargo.toml
netmonitor-xtask/src/: main.rs
netmonitor/debian/: postinst  postrm  prerm
netmonitor/resources/: netmonitor.service
netmonitor/src/: app.rs  config.rs  db.rs  dns.rs  export.rs  geoip.rs  main.rs  process.rs  protocol.rs  theme.rs  tui.rs  ui.rs
netmonitor/src/core/: collector.rs  domain.rs  error.rs  mod.rs  types.rs
netmonitor/src/core/services/: enforcement.rs  identity.rs  mod.rs  monitoring.rs  monitoring_loop.rs  traffic.rs
resources/: netmonitor.1
scripts/: verify_accuracy.sh
