[workspace]
members = [
    "netmonitor",
    "netmonitor-ebpf",
    "netmonitor-common",
    "netmonitor-xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.1"
authors = ["Aeen <your-email@example.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/your-username/NetMonitor"
description = "A high-performance network monitoring tool for Linux using eBPF and Rust."

[workspace.dependencies]
aya = { version = "0.13", default-features = false }
aya-log = "0.2"
netmonitor-common = { path = "netmonitor-common" }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
