[package]
name = "netmonitor-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
aya = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
user = ["dep:aya"]
