[package]
name = "netmonitor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya.workspace = true
aya-log.workspace = true
netmonitor-common = { path = "../netmonitor-common" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] } # For CLI arguments
