[package]
name = "netmonitor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
aya.workspace = true
aya-log.workspace = true
netmonitor-common = { path = "../netmonitor-common", features = ["user"] }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
libc = "0.2"
caps = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] } # For CLI arguments
maxminddb = "0.23"
once_cell = "1.18"
trust-dns-resolver = "0.23"
dashmap = "5.5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
