[package]
name = "netmonitor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance Linux network monitor using eBPF and Ratatui"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
aya.workspace = true
aya-log.workspace = true
netmonitor-common = { path = "../netmonitor-common", features = ["user"] }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
libc = "0.2"
caps = "0.5"
daemonize = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] } # For CLI arguments
maxminddb = "0.23"
once_cell = "1.18"
trust-dns-resolver = "0.23"
dashmap = "5.5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dark-light = "1.0"
toml = "0.8"
directories = "5.0"

[dev-dependencies]
proptest = "1.0"

[package.metadata.deb]
maintainer = "Aeen <your-email@example.com>"
copyright = "2026, Aeen <your-email@example.com>"
license-file = ["../LICENSE", "0"]
depends = "$auto, libcap2-bin"
section = "net"
priority = "optional"
assets = [
    ["../target/release/netmonitor", "usr/bin/netmonitor", "755"],
    ["resources/netmonitor.service", "lib/systemd/system/netmonitor.service", "644"],
    ["resources/netmonitor.1", "usr/share/man/man1/netmonitor.1", "644"],
]
maintainer-scripts = "debian/"
